y.output
State 331 conflicts: 1 shift/reduce


Grammar

    0 $accept: tiny_java_program $end

    1 tiny_java_program: class_decl

    2 $@1: /* empty */

    3 class_decl: PUBLIC CLASS IDENT $@1 LBRACE member_decl_list RBRACE
    4           | PUBLIC CLASS error LBRACE member_decl_list RBRACE
    5           | PUBLIC error IDENT LBRACE member_decl_list RBRACE
    6           | error CLASS IDENT LBRACE member_decl_list RBRACE
    7           | error

    8 member_decl_list: member_decl
    9                 | member_decl member_decl_list

   10 member_decl: field_decl
   11            | method_decl

   12 field_decl: STATIC type IDENT EQ literal SEMI
   13           | STATIC type IDENT EQ literal error
   14           | STATIC type IDENT EQ error SEMI
   15           | STATIC type IDENT error literal SEMI
   16           | STATIC type error EQ literal SEMI
   17           | STATIC error IDENT EQ literal SEMI

   18 $@2: /* empty */

   19 $@3: /* empty */

   20 method_decl: STATIC type IDENT LPAR $@2 formal_param_list RPAR $@3 LBRACE method_body RBRACE

   21 $@4: /* empty */

   22 $@5: /* empty */

   23 method_decl: STATIC VOID IDENT LPAR $@4 formal_param_list RPAR $@5 LBRACE method_body RBRACE
   24            | STATIC type IDENT LPAR RPAR LBRACE method_body RBRACE
   25            | STATIC VOID IDENT LPAR RPAR LBRACE method_body RBRACE

   26 $@6: /* empty */

   27 method_decl: PUBLIC STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   28            | STATIC VOID IDENT error formal_param_list RPAR LBRACE method_body RBRACE
   29            | STATIC VOID error LPAR formal_param_list RPAR LBRACE method_body RBRACE
   30            | STATIC type IDENT LPAR RPAR LBRACE method_body error
   31            | STATIC type error LPAR RPAR LBRACE method_body RBRACE
   32            | STATIC VOID IDENT LPAR RPAR LBRACE method_body error
   33            | STATIC VOID IDENT LPAR RPAR error method_body RBRACE
   34            | STATIC VOID IDENT LPAR error LBRACE method_body RBRACE
   35            | STATIC VOID IDENT error RPAR LBRACE method_body RBRACE
   36            | PUBLIC STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC STATIC VOID IDENT LPAR IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC STATIC VOID IDENT LPAR IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC STATIC VOID IDENT LPAR IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC STATIC VOID IDENT LPAR error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   42            | PUBLIC STATIC VOID IDENT error IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   43            | PUBLIC STATIC error IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   44            | PUBLIC error VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

   45 type: INT
   46     | FLOAT

   47 formal_param_list: formal_param
   48                  | formal_param COMMA formal_param_list
   49                  | formal_param COMMA error

   50 formal_param: type IDENT
   51             | type error

   52 method_body: local_decl_list method_statement_list

   53 local_decl_list: local_decl local_decl_list
   54                | /* empty */

   55 local_decl: type IDENT EQ literal SEMI
   56           | type IDENT EQ literal error
   57           | type IDENT EQ error SEMI
   58           | type IDENT error literal SEMI
   59           | type error EQ literal SEMI

   60 method_statement_list: statement method_statement_list
   61                      | return_statement

   62 statement_list: statement statement_list
   63               | statement error
   64               | /* empty */

   65 statement: IDENT EQ expression SEMI
   66          | IF LPAR expression RPAR statement
   67          | IF LPAR expression RPAR statement ELSE statement
   68          | WHILE LPAR expression RPAR statement
   69          | method_invocation SEMI
   70          | method_invocation error
   71          | LBRACE statement_list RBRACE
   72          | SEMI
   73          | IDENT EQ expression error
   74          | IDENT EQ error SEMI
   75          | IDENT error expression SEMI
   76          | IF LPAR expression RPAR error
   77          | IF LPAR expression error statement
   78          | IF LPAR error RPAR statement
   79          | IF error expression RPAR statement
   80          | error LPAR expression RPAR statement
   81          | WHILE LPAR expression RPAR error
   82          | WHILE LPAR expression error statement
   83          | WHILE LPAR error RPAR statement
   84          | WHILE error expression RPAR statement

   85 return_statement: RETURN expression SEMI
   86                 | RETURN SEMI
   87                 | RETURN expression error
   88                 | RETURN error SEMI
   89                 | RETURN error

   90 method_invocation: IDENT LPAR argument_list RPAR
   91                  | IDENT LPAR RPAR
   92                  | IDENT PERIOD IDENT LPAR argument_list RPAR
   93                  | IDENT PERIOD IDENT LPAR RPAR

   94 argument_list: expression
   95              | expression COMMA argument_list

   96 expression: relational_expression
   97           | relational_expression DOUBLEEQ relational_expression
   98           | relational_expression NEQ relational_expression
   99           | relational_expression DOUBLEEQ error
  100           | relational_expression NEQ error

  101 relational_expression: additive_expression
  102                      | additive_expression LESS additive_expression
  103                      | additive_expression GREATER additive_expression
  104                      | additive_expression LEQ additive_expression
  105                      | additive_expression GEQ additive_expression
  106                      | additive_expression LESS error
  107                      | additive_expression GREATER error
  108                      | additive_expression LEQ error
  109                      | additive_expression GEQ error

  110 additive_expression: multiplicative_expression
  111                    | additive_expression PLUS multiplicative_expression
  112                    | additive_expression MINUS multiplicative_expression
  113                    | additive_expression PLUS error
  114                    | additive_expression MINUS error

  115 multiplicative_expression: unary_expression
  116                          | multiplicative_expression MULT unary_expression
  117                          | multiplicative_expression DIVIDE unary_expression
  118                          | multiplicative_expression MULT error
  119                          | multiplicative_expression DIVIDE error

  120 unary_expression: primary_expression
  121                 | PLUS unary_expression
  122                 | MINUS unary_expression
  123                 | LPAR type RPAR unary_expression
  124                 | LPAR type RPAR error
  125                 | LPAR type error unary_expression
  126                 | PLUS error
  127                 | MINUS error

  128 primary_expression: literal
  129                   | IDENT
  130                   | method_invocation
  131                   | LPAR expression RPAR
  132                   | LPAR error RPAR
  133                   | LPAR expression error

  134 literal: ICONST
  135        | FCONST
  136        | SCONST


Terminals, with rules where they appear

$end (0) 0
error (256) 4 5 6 7 13 14 15 16 17 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 49 51 56 57 58 59 63 70 73 74 75 76 77 78 79
    80 81 82 83 84 87 88 89 99 100 106 107 108 109 113 114 118 119
    124 125 126 127 132 133
PUBLIC (258) 3 4 5 27 36 37 38 39 40 41 42 43 44
CLASS (259) 3 4 6
IDENT (260) 3 5 6 12 13 14 15 17 20 23 24 25 27 28 30 32 33 34 35 36
    37 38 39 40 41 42 43 44 50 55 56 57 58 65 73 74 75 90 91 92 93
    129
LBRACE (261) 3 4 5 6 20 23 24 25 27 28 29 30 31 32 34 35 37 38 39 40
    41 42 43 44 71
RBRACE (262) 3 4 5 6 20 23 24 25 27 28 29 31 33 34 35 36 37 38 39 40
    41 42 43 44 71
STATIC (263) 12 13 14 15 16 17 20 23 24 25 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43
EQ (264) 12 13 14 16 17 55 56 57 59 65 73 74
SEMI (265) 12 14 15 16 17 55 57 58 59 65 69 72 74 75 85 86 88
LPAR (266) 20 23 24 25 27 29 30 31 32 33 34 36 37 38 39 40 41 43 44
    66 67 68 76 77 78 80 81 82 83 90 91 92 93 123 124 125 131 132 133
RPAR (267) 20 23 24 25 27 28 29 30 31 32 33 35 36 38 39 40 41 42 43
    44 66 67 68 76 78 79 80 81 83 84 90 91 92 93 123 124 131 132
VOID (268) 23 25 27 28 29 32 33 34 35 36 37 38 39 40 41 42 44
LBRACK (269) 27 36 37 38 39 41 42 43 44
RBRACK (270) 27 36 37 38 40 41 42 43 44
INT (271) 45
FLOAT (272) 46
COMMA (273) 48 49 95
IF (274) 66 67 76 77 78 79
ELSE (275) 67
WHILE (276) 68 81 82 83 84
RETURN (277) 85 86 87 88 89
PERIOD (278) 92 93
DOUBLEEQ (279) 97 99
NEQ (280) 98 100
LESS (281) 102 106
GREATER (282) 103 107
LEQ (283) 104 108
GEQ (284) 105 109
PLUS (285) 111 113 121 126
MINUS (286) 112 114 122 127
MULT (287) 116 118
DIVIDE (288) 117 119
ICONST (289) 134
FCONST (290) 135
SCONST (291) 136


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
tiny_java_program (38)
    on left: 1, on right: 0
class_decl (39)
    on left: 3 4 5 6 7, on right: 1
$@1 (40)
    on left: 2, on right: 3
member_decl_list (41)
    on left: 8 9, on right: 3 4 5 6 9
member_decl (42)
    on left: 10 11, on right: 8 9
field_decl (43)
    on left: 12 13 14 15 16 17, on right: 10
method_decl (44)
    on left: 20 23 24 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44, on right: 11
$@2 (45)
    on left: 18, on right: 20
$@3 (46)
    on left: 19, on right: 20
$@4 (47)
    on left: 21, on right: 23
$@5 (48)
    on left: 22, on right: 23
$@6 (49)
    on left: 26, on right: 27
type (50)
    on left: 45 46, on right: 12 13 14 15 16 20 24 30 31 50 51 55 56
    57 58 59 123 124 125
formal_param_list (51)
    on left: 47 48 49, on right: 20 23 28 29 48
formal_param (52)
    on left: 50 51, on right: 47 48 49
method_body (53)
    on left: 52, on right: 20 23 24 25 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44
local_decl_list (54)
    on left: 53 54, on right: 52 53
local_decl (55)
    on left: 55 56 57 58 59, on right: 53
method_statement_list (56)
    on left: 60 61, on right: 52 60
statement_list (57)
    on left: 62 63 64, on right: 62 71
statement (58)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84, on right: 60 62 63 66 67 68 77 78 79 80 82 83 84
return_statement (59)
    on left: 85 86 87 88 89, on right: 61
method_invocation (60)
    on left: 90 91 92 93, on right: 69 70 130
argument_list (61)
    on left: 94 95, on right: 90 92 95
expression (62)
    on left: 96 97 98 99 100, on right: 65 66 67 68 73 75 76 77 79
    80 81 82 84 85 87 94 95 131 133
relational_expression (63)
    on left: 101 102 103 104 105 106 107 108 109, on right: 96 97 98
    99 100
additive_expression (64)
    on left: 110 111 112 113 114, on right: 101 102 103 104 105 106
    107 108 109 111 112 113 114
multiplicative_expression (65)
    on left: 115 116 117 118 119, on right: 110 111 112 116 117 118
    119
unary_expression (66)
    on left: 120 121 122 123 124 125 126 127, on right: 115 116 117
    121 122 123 125
primary_expression (67)
    on left: 128 129 130 131 132 133, on right: 120
literal (68)
    on left: 134 135 136, on right: 12 13 15 16 17 55 56 58 59 128


state 0

    0 $accept: . tiny_java_program $end

    error   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    tiny_java_program  go to state 3
    class_decl         go to state 4


state 1

    6 class_decl: error . CLASS IDENT LBRACE member_decl_list RBRACE
    7           | error .

    CLASS  shift, and go to state 5

    $default  reduce using rule 7 (class_decl)


state 2

    3 class_decl: PUBLIC . CLASS IDENT $@1 LBRACE member_decl_list RBRACE
    4           | PUBLIC . CLASS error LBRACE member_decl_list RBRACE
    5           | PUBLIC . error IDENT LBRACE member_decl_list RBRACE

    error  shift, and go to state 6
    CLASS  shift, and go to state 7


state 3

    0 $accept: tiny_java_program . $end

    $end  shift, and go to state 8


state 4

    1 tiny_java_program: class_decl .

    $default  reduce using rule 1 (tiny_java_program)


state 5

    6 class_decl: error CLASS . IDENT LBRACE member_decl_list RBRACE

    IDENT  shift, and go to state 9


state 6

    5 class_decl: PUBLIC error . IDENT LBRACE member_decl_list RBRACE

    IDENT  shift, and go to state 10


state 7

    3 class_decl: PUBLIC CLASS . IDENT $@1 LBRACE member_decl_list RBRACE
    4           | PUBLIC CLASS . error LBRACE member_decl_list RBRACE

    error  shift, and go to state 11
    IDENT  shift, and go to state 12


state 8

    0 $accept: tiny_java_program $end .

    $default  accept


state 9

    6 class_decl: error CLASS IDENT . LBRACE member_decl_list RBRACE

    LBRACE  shift, and go to state 13


state 10

    5 class_decl: PUBLIC error IDENT . LBRACE member_decl_list RBRACE

    LBRACE  shift, and go to state 14


state 11

    4 class_decl: PUBLIC CLASS error . LBRACE member_decl_list RBRACE

    LBRACE  shift, and go to state 15


state 12

    3 class_decl: PUBLIC CLASS IDENT . $@1 LBRACE member_decl_list RBRACE

    $default  reduce using rule 2 ($@1)

    $@1  go to state 16


state 13

    6 class_decl: error CLASS IDENT LBRACE . member_decl_list RBRACE

    PUBLIC  shift, and go to state 17
    STATIC  shift, and go to state 18

    member_decl_list  go to state 19
    member_decl       go to state 20
    field_decl        go to state 21
    method_decl       go to state 22


state 14

    5 class_decl: PUBLIC error IDENT LBRACE . member_decl_list RBRACE

    PUBLIC  shift, and go to state 17
    STATIC  shift, and go to state 18

    member_decl_list  go to state 23
    member_decl       go to state 20
    field_decl        go to state 21
    method_decl       go to state 22


state 15

    4 class_decl: PUBLIC CLASS error LBRACE . member_decl_list RBRACE

    PUBLIC  shift, and go to state 17
    STATIC  shift, and go to state 18

    member_decl_list  go to state 24
    member_decl       go to state 20
    field_decl        go to state 21
    method_decl       go to state 22


state 16

    3 class_decl: PUBLIC CLASS IDENT $@1 . LBRACE member_decl_list RBRACE

    LBRACE  shift, and go to state 25


state 17

   27 method_decl: PUBLIC . STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   36            | PUBLIC . STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC . STATIC VOID IDENT LPAR IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC . STATIC VOID IDENT LPAR IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC . STATIC VOID IDENT LPAR IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC . STATIC VOID IDENT LPAR IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC . STATIC VOID IDENT LPAR error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   42            | PUBLIC . STATIC VOID IDENT error IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   43            | PUBLIC . STATIC error IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   44            | PUBLIC . error VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    error   shift, and go to state 26
    STATIC  shift, and go to state 27


state 18

   12 field_decl: STATIC . type IDENT EQ literal SEMI
   13           | STATIC . type IDENT EQ literal error
   14           | STATIC . type IDENT EQ error SEMI
   15           | STATIC . type IDENT error literal SEMI
   16           | STATIC . type error EQ literal SEMI
   17           | STATIC . error IDENT EQ literal SEMI
   20 method_decl: STATIC . type IDENT LPAR $@2 formal_param_list RPAR $@3 LBRACE method_body RBRACE
   23            | STATIC . VOID IDENT LPAR $@4 formal_param_list RPAR $@5 LBRACE method_body RBRACE
   24            | STATIC . type IDENT LPAR RPAR LBRACE method_body RBRACE
   25            | STATIC . VOID IDENT LPAR RPAR LBRACE method_body RBRACE
   28            | STATIC . VOID IDENT error formal_param_list RPAR LBRACE method_body RBRACE
   29            | STATIC . VOID error LPAR formal_param_list RPAR LBRACE method_body RBRACE
   30            | STATIC . type IDENT LPAR RPAR LBRACE method_body error
   31            | STATIC . type error LPAR RPAR LBRACE method_body RBRACE
   32            | STATIC . VOID IDENT LPAR RPAR LBRACE method_body error
   33            | STATIC . VOID IDENT LPAR RPAR error method_body RBRACE
   34            | STATIC . VOID IDENT LPAR error LBRACE method_body RBRACE
   35            | STATIC . VOID IDENT error RPAR LBRACE method_body RBRACE

    error  shift, and go to state 28
    VOID   shift, and go to state 29
    INT    shift, and go to state 30
    FLOAT  shift, and go to state 31

    type  go to state 32


state 19

    6 class_decl: error CLASS IDENT LBRACE member_decl_list . RBRACE

    RBRACE  shift, and go to state 33


state 20

    8 member_decl_list: member_decl .
    9                 | member_decl . member_decl_list

    PUBLIC  shift, and go to state 17
    STATIC  shift, and go to state 18

    $default  reduce using rule 8 (member_decl_list)

    member_decl_list  go to state 34
    member_decl       go to state 20
    field_decl        go to state 21
    method_decl       go to state 22


state 21

   10 member_decl: field_decl .

    $default  reduce using rule 10 (member_decl)


state 22

   11 member_decl: method_decl .

    $default  reduce using rule 11 (member_decl)


state 23

    5 class_decl: PUBLIC error IDENT LBRACE member_decl_list . RBRACE

    RBRACE  shift, and go to state 35


state 24

    4 class_decl: PUBLIC CLASS error LBRACE member_decl_list . RBRACE

    RBRACE  shift, and go to state 36


state 25

    3 class_decl: PUBLIC CLASS IDENT $@1 LBRACE . member_decl_list RBRACE

    PUBLIC  shift, and go to state 17
    STATIC  shift, and go to state 18

    member_decl_list  go to state 37
    member_decl       go to state 20
    field_decl        go to state 21
    method_decl       go to state 22


state 26

   44 method_decl: PUBLIC error . VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    VOID  shift, and go to state 38


state 27

   27 method_decl: PUBLIC STATIC . VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   36            | PUBLIC STATIC . VOID IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC STATIC . VOID IDENT LPAR IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC STATIC . VOID IDENT LPAR IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC STATIC . VOID IDENT LPAR IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC STATIC . VOID IDENT LPAR IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC STATIC . VOID IDENT LPAR error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   42            | PUBLIC STATIC . VOID IDENT error IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   43            | PUBLIC STATIC . error IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    error  shift, and go to state 39
    VOID   shift, and go to state 40


state 28

   17 field_decl: STATIC error . IDENT EQ literal SEMI

    IDENT  shift, and go to state 41


state 29

   23 method_decl: STATIC VOID . IDENT LPAR $@4 formal_param_list RPAR $@5 LBRACE method_body RBRACE
   25            | STATIC VOID . IDENT LPAR RPAR LBRACE method_body RBRACE
   28            | STATIC VOID . IDENT error formal_param_list RPAR LBRACE method_body RBRACE
   29            | STATIC VOID . error LPAR formal_param_list RPAR LBRACE method_body RBRACE
   32            | STATIC VOID . IDENT LPAR RPAR LBRACE method_body error
   33            | STATIC VOID . IDENT LPAR RPAR error method_body RBRACE
   34            | STATIC VOID . IDENT LPAR error LBRACE method_body RBRACE
   35            | STATIC VOID . IDENT error RPAR LBRACE method_body RBRACE

    error  shift, and go to state 42
    IDENT  shift, and go to state 43


state 30

   45 type: INT .

    $default  reduce using rule 45 (type)


state 31

   46 type: FLOAT .

    $default  reduce using rule 46 (type)


state 32

   12 field_decl: STATIC type . IDENT EQ literal SEMI
   13           | STATIC type . IDENT EQ literal error
   14           | STATIC type . IDENT EQ error SEMI
   15           | STATIC type . IDENT error literal SEMI
   16           | STATIC type . error EQ literal SEMI
   20 method_decl: STATIC type . IDENT LPAR $@2 formal_param_list RPAR $@3 LBRACE method_body RBRACE
   24            | STATIC type . IDENT LPAR RPAR LBRACE method_body RBRACE
   30            | STATIC type . IDENT LPAR RPAR LBRACE method_body error
   31            | STATIC type . error LPAR RPAR LBRACE method_body RBRACE

    error  shift, and go to state 44
    IDENT  shift, and go to state 45


state 33

    6 class_decl: error CLASS IDENT LBRACE member_decl_list RBRACE .

    $default  reduce using rule 6 (class_decl)


state 34

    9 member_decl_list: member_decl member_decl_list .

    $default  reduce using rule 9 (member_decl_list)


state 35

    5 class_decl: PUBLIC error IDENT LBRACE member_decl_list RBRACE .

    $default  reduce using rule 5 (class_decl)


state 36

    4 class_decl: PUBLIC CLASS error LBRACE member_decl_list RBRACE .

    $default  reduce using rule 4 (class_decl)


state 37

    3 class_decl: PUBLIC CLASS IDENT $@1 LBRACE member_decl_list . RBRACE

    RBRACE  shift, and go to state 46


state 38

   44 method_decl: PUBLIC error VOID . IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 47


state 39

   43 method_decl: PUBLIC STATIC error . IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 48


state 40

   27 method_decl: PUBLIC STATIC VOID . IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   36            | PUBLIC STATIC VOID . IDENT LPAR IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC STATIC VOID . IDENT LPAR IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC STATIC VOID . IDENT LPAR IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC STATIC VOID . IDENT LPAR IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC STATIC VOID . IDENT LPAR IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC STATIC VOID . IDENT LPAR error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   42            | PUBLIC STATIC VOID . IDENT error IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 49


state 41

   17 field_decl: STATIC error IDENT . EQ literal SEMI

    EQ  shift, and go to state 50


state 42

   29 method_decl: STATIC VOID error . LPAR formal_param_list RPAR LBRACE method_body RBRACE

    LPAR  shift, and go to state 51


state 43

   23 method_decl: STATIC VOID IDENT . LPAR $@4 formal_param_list RPAR $@5 LBRACE method_body RBRACE
   25            | STATIC VOID IDENT . LPAR RPAR LBRACE method_body RBRACE
   28            | STATIC VOID IDENT . error formal_param_list RPAR LBRACE method_body RBRACE
   32            | STATIC VOID IDENT . LPAR RPAR LBRACE method_body error
   33            | STATIC VOID IDENT . LPAR RPAR error method_body RBRACE
   34            | STATIC VOID IDENT . LPAR error LBRACE method_body RBRACE
   35            | STATIC VOID IDENT . error RPAR LBRACE method_body RBRACE

    error  shift, and go to state 52
    LPAR   shift, and go to state 53


state 44

   16 field_decl: STATIC type error . EQ literal SEMI
   31 method_decl: STATIC type error . LPAR RPAR LBRACE method_body RBRACE

    EQ    shift, and go to state 54
    LPAR  shift, and go to state 55


state 45

   12 field_decl: STATIC type IDENT . EQ literal SEMI
   13           | STATIC type IDENT . EQ literal error
   14           | STATIC type IDENT . EQ error SEMI
   15           | STATIC type IDENT . error literal SEMI
   20 method_decl: STATIC type IDENT . LPAR $@2 formal_param_list RPAR $@3 LBRACE method_body RBRACE
   24            | STATIC type IDENT . LPAR RPAR LBRACE method_body RBRACE
   30            | STATIC type IDENT . LPAR RPAR LBRACE method_body error

    error  shift, and go to state 56
    EQ     shift, and go to state 57
    LPAR   shift, and go to state 58


state 46

    3 class_decl: PUBLIC CLASS IDENT $@1 LBRACE member_decl_list RBRACE .

    $default  reduce using rule 3 (class_decl)


state 47

   44 method_decl: PUBLIC error VOID IDENT . LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    LPAR  shift, and go to state 59


state 48

   43 method_decl: PUBLIC STATIC error IDENT . LPAR IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    LPAR  shift, and go to state 60


state 49

   27 method_decl: PUBLIC STATIC VOID IDENT . LPAR IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   36            | PUBLIC STATIC VOID IDENT . LPAR IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC STATIC VOID IDENT . LPAR IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC STATIC VOID IDENT . LPAR IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC STATIC VOID IDENT . LPAR IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC STATIC VOID IDENT . LPAR IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC STATIC VOID IDENT . LPAR error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE
   42            | PUBLIC STATIC VOID IDENT . error IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    error  shift, and go to state 61
    LPAR   shift, and go to state 62


state 50

   17 field_decl: STATIC error IDENT EQ . literal SEMI

    ICONST  shift, and go to state 63
    FCONST  shift, and go to state 64
    SCONST  shift, and go to state 65

    literal  go to state 66


state 51

   29 method_decl: STATIC VOID error LPAR . formal_param_list RPAR LBRACE method_body RBRACE

    INT    shift, and go to state 30
    FLOAT  shift, and go to state 31

    type               go to state 67
    formal_param_list  go to state 68
    formal_param       go to state 69


state 52

   28 method_decl: STATIC VOID IDENT error . formal_param_list RPAR LBRACE method_body RBRACE
   35            | STATIC VOID IDENT error . RPAR LBRACE method_body RBRACE

    RPAR   shift, and go to state 70
    INT    shift, and go to state 30
    FLOAT  shift, and go to state 31

    type               go to state 67
    formal_param_list  go to state 71
    formal_param       go to state 69


state 53

   23 method_decl: STATIC VOID IDENT LPAR . $@4 formal_param_list RPAR $@5 LBRACE method_body RBRACE
   25            | STATIC VOID IDENT LPAR . RPAR LBRACE method_body RBRACE
   32            | STATIC VOID IDENT LPAR . RPAR LBRACE method_body error
   33            | STATIC VOID IDENT LPAR . RPAR error method_body RBRACE
   34            | STATIC VOID IDENT LPAR . error LBRACE method_body RBRACE

    error  shift, and go to state 72
    RPAR   shift, and go to state 73

    INT    reduce using rule 21 ($@4)
    FLOAT  reduce using rule 21 ($@4)

    $@4  go to state 74


state 54

   16 field_decl: STATIC type error EQ . literal SEMI

    ICONST  shift, and go to state 63
    FCONST  shift, and go to state 64
    SCONST  shift, and go to state 65

    literal  go to state 75


state 55

   31 method_decl: STATIC type error LPAR . RPAR LBRACE method_body RBRACE

    RPAR  shift, and go to state 76


state 56

   15 field_decl: STATIC type IDENT error . literal SEMI

    ICONST  shift, and go to state 63
    FCONST  shift, and go to state 64
    SCONST  shift, and go to state 65

    literal  go to state 77


state 57

   12 field_decl: STATIC type IDENT EQ . literal SEMI
   13           | STATIC type IDENT EQ . literal error
   14           | STATIC type IDENT EQ . error SEMI

    error   shift, and go to state 78
    ICONST  shift, and go to state 63
    FCONST  shift, and go to state 64
    SCONST  shift, and go to state 65

    literal  go to state 79


state 58

   20 method_decl: STATIC type IDENT LPAR . $@2 formal_param_list RPAR $@3 LBRACE method_body RBRACE
   24            | STATIC type IDENT LPAR . RPAR LBRACE method_body RBRACE
   30            | STATIC type IDENT LPAR . RPAR LBRACE method_body error

    RPAR  shift, and go to state 80

    $default  reduce using rule 18 ($@2)

    $@2  go to state 81


state 59

   44 method_decl: PUBLIC error VOID IDENT LPAR . IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 82


state 60

   43 method_decl: PUBLIC STATIC error IDENT LPAR . IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 83


state 61

   42 method_decl: PUBLIC STATIC VOID IDENT error . IDENT LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    IDENT  shift, and go to state 84


state 62

   27 method_decl: PUBLIC STATIC VOID IDENT LPAR . IDENT LBRACK RBRACK IDENT RPAR $@6 LBRACE method_body RBRACE
   36            | PUBLIC STATIC VOID IDENT LPAR . IDENT LBRACK RBRACK IDENT RPAR error method_body RBRACE
   37            | PUBLIC STATIC VOID IDENT LPAR . IDENT LBRACK RBRACK IDENT error LBRACE method_body RBRACE
   38            | PUBLIC STATIC VOID IDENT LPAR . IDENT LBRACK RBRACK error RPAR LBRACE method_body RBRACE
   39            | PUBLIC STATIC VOID IDENT LPAR . IDENT LBRACK error IDENT RPAR LBRACE method_body RBRACE
   40            | PUBLIC STATIC VOID IDENT LPAR . IDENT error RBRACK IDENT RPAR LBRACE method_body RBRACE
   41            | PUBLIC STATIC VOID IDENT LPAR . error LBRACK RBRACK IDENT RPAR LBRACE method_body RBRACE

    error  shift, and go to state 85
    IDENT  shift, and go to state 86


state 63

  134 literal: ICONST .

    $default  reduce using rule 134 (literal)


state 64

  135 literal: FCONST .

    $default  reduce using rule 135 (literal)


state 65

  136 literal: SCONST .

    $default  reduce using rule 136 (literal)


state 66

   17 field_decl: STATIC error IDENT EQ literal . SEMI

    SEMI  shift, and go to state 87


state 67

   50 formal_param: type . IDENT
   51             | type . error

    error  shift, and go to state 88
    IDENT  shift, and go to state 89


state 68

   29 method_decl: STATIC VOID error LPAR formal_param_list . RPAR LBRACE method_body RBRACE

    RPAR  shift, and go to state 90


state 69

   47 formal_param_list: formal_param .
   48                  | formal_param . COMMA formal_param_list
   49                  | formal_param . COMMA error

    COMMA  shift, and go to state 91

    $default  reduce using rule 47 (formal_param_list)


state 70

   35 method_decl: STATIC VOID IDENT error RPAR . LBRACE method_body RBRACE

    LBRACE  shift, and go to state 92


state 71

   28 method_decl: STATIC VOID IDENT error formal_param_list . RPAR LBRACE method_body RBRACE

    RPAR  shift, and go to state 93


state 72

   34 method_decl: STATIC VOID IDENT LPAR error . LBRACE method_body RBRACE

    LBRACE  shift, and go to state 94


state 73

   25 method_decl: STATIC VOID IDENT LPAR RPAR . LBRACE method_body RBRACE
   32            | STATIC VOID IDENT LPAR RPAR . LBRACE method_body error
   33            | STATIC VOID IDENT LPAR RPAR . error method_body RBRACE
